# MinSynth

./: CMakeLists.txt  README
examples/: BodyApp.cpp  BodyApp.h  CMakeLists.txt  playSine.cpp  theremin.cpp  windowedExample.cpp
minsynth/: AudioDevice.cpp  AudioDevice.h  CMakeLists.txt  IAudioDevice.h
